# scz-target-engine

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: README.md  schema_alias_overrides.csv  v0.toml
docs/: architecture.md  artifact_schemas.md  atlas_mechanistic_structure.md  atlas_source_ingest.md  atlas_tensor.md  benchmarking.md  chembl.md  claim.md  hidden_eval.md  hypothesis_packets.md  intervention_object_compatibility.md  ledger_contract.md  ontology.md  opentargets.md  pgc.md  prep.md  program_history.md  prospective_registry.md  psychencode.md  rescue_tasks.md  roadmap.md  schema.md  scoring_contract.md  source_manifest.md
scripts/: run_contract_smoke_path.sh
tests/: benchmark_test_support.py  program_memory_fixtures.py  test_artifacts.py  test_atlas_convergence.py  test_atlas_mechanistic_axes.py  test_atlas_taxonomy.py  test_atlas_tensor.py  test_benchmark_backfill.py  test_benchmark_labels.py  test_benchmark_leaderboard.py  test_benchmark_metrics.py  test_benchmark_protocol.py  test_benchmark_registry.py  test_benchmark_runner.py  test_benchmark_snapshots.py  test_benchmark_track_b.py  test_chembl.py  test_cli.py  test_contract_freeze_docs.py  test_curation_assistant.py  test_decision_vector.py  test_docs_benchmark_workflow.py  test_docs_hidden_eval.py  test_engine.py  test_expert_review_packets.py  test_glutamatergic_convergence_rescue.py  test_hidden_eval.py  test_hypothesis_agent.py  test_hypothesis_packets.py  test_identity.py  test_ingest.py  test_interneuron_rescue_tasks.py  test_ledger.py  test_npc_signature_reversal_rescue_task.py  (+21 more)
(+403 files in other folders)
