[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scz-target-engine"
version = "0.1.0"
description = "A public-data-first schizophrenia target prioritization engine."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pyarrow>=18.1.0",
]

[project.scripts]
scz-target-engine = "scz_target_engine.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"scz_target_engine.program_memory" = ["source_captures/karxt/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
